--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,15 +1,26 @@
-.text{color:#808080;}
-.text-ok{color:green;}
-.text-warn{color:orange;}
-.text-danger{color:red;}
-
+/* 
+blue - #256dad
+red  - #98120f
+*/
 body{
 	background-color:#333;
 	background-image: radial-gradient(farthest-corner at 50% 50%, #008000 0%, #001001 100%);
 }
 
 .main-box{}
-.main-screen{}
+.main-broadcast{
+	position:absolute;
+	width:33%; max-height:50%; left:10px; bottom:10px;
+	line-height:18px;
+	color:white;
+}
+.main-broadcast>li{
+	margin-top:5px;
+}
+.text-ok{color:#3dff00;}
+.text-warn{color:orange;}
+.text-danger{color:red;}
+
 .main-fn{
 	position:absolute;
 	top:10px; right:10px; width:30px; height:80px;
@@ -23,27 +34,68 @@ body{
 .main-menu{background-image:url(../img/menu.png);}
 .main-speak{background-image:url(../img/speak.png);}
 
-.main-table{}
-.main-seats{display:none;}
-.main-player{}
-.main-head{}
-.main-name{}
-.main-score{}
-.main-status{}
-.main-cards{}
-
-
-.main-card{}
-
+.main-table{
+	position:absolute;
+	top:20px; left:50px; right:50px; bottom:60px;
+}
+.main-player{
+	position:absolute;
+	width:80px; height:80px;
+}
+.main-player:nth-child(1){right:140px; bottom:0;}
+.main-player:nth-child(2){left:140px; bottom:0;}
+.main-player:nth-child(3){left:0; bottom:0; top:0; margin:auto;}
+.main-player:nth-child(4){left:140px; top:0;}
+.main-player:nth-child(5){right:140px; top:0;}
+.main-player:nth-child(6){right:10px; bottom:0; top:0; margin:auto;}
+.main-head{
+	position:absolute; overflow:hidden;
+	top:0; left:0; width:100%; height:100%;
+	border-radius:50%;
+}
+.main-name{
+	position:relative; display:inline-block; overflow:hidden;
+	left:60%; top:-5px; max-width:80px; height:20px; line-height:20px;
+	padding:0 10px; border-radius:10px;
+	background-color:rgba(0,0,0,.3); color:white;
+	font-size:14px; white-space:nowrap; text-overflow:ellipsis;
+}
+.main-score{
+	position:absolute;
+	left:0; bottom:-10px; width:100%; height:20px; line-height:20px;
+	border-radius:3px;
+	background-color:rgba(0,0,0,.7); color:yellow;
+	text-align:center; font-size:16px;
+}
+.main-status{
+	position:absolute;
+	left:100%; bottom:40px; width:50px; height:20px; line-height:20px;
+	padding-left:30px;
+	background:url(../img/chip.png) no-repeat left center;
+	background-size:contain;
+	color:white;
+	font-size:16px;
+}
 .main-hand{
 	position:absolute;
-	left:0; right:0; bottom:50px; width:100px; height:60px;
-	margin:auto;
+	left:60px; bottom:-15px; width:80px; height:50px;
 }
+.main-timer{display:none;}
+.main-pool{
+	position:absolute; box-sizing:border-box;
+	left:0; right:0; top:0; bottom:0; width:50px; height:60px; line-height:60px;
+	padding-left:70px; margin:auto;
+	background:url(../img/pool.png) no-repeat left center;
+	background-size:contain;
+	color:white;
+	font-size:24px; font-family:'Georgia';
+}
+
+
 .main-card{
 	float:left;
 	width:40%; height:100%;
-	padding-left:5%; border-radius:3px; margin-right:5%;
+	padding-left:5%; border-radius:3px; margin-right:3%;
 	background:url(../img/back.jpg) no-repeat;
 	background-size:contain;
 	font-size:22px; font-weight:bold;
@@ -66,7 +118,7 @@ body{
 
 .main-wait{
 	position:absolute;
-	bottom:10px; left:10px; height:40px;
+	top:10px; left:10px; height:40px;
 }
 .main-wait>li{
 	float:left; overflow:hidden;
